feat(html): change title and meta description

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta
+      name="description"
+      content="Hey Sun : a simple weather application giving the temperature and weather in the city of your choice."
+    />
+    <title>Hey sun : weather application</title>
   </head>
   <body>
     <div id="app"></div>
